01_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: red1
  labels:
    demo: demo
    tenant: red
---
apiVersion: v1
kind: Namespace
metadata:
  name: red2
  labels:
    demo: demo
    tenant: red
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue
  labels:
    demo: demo
    tenant: blue
