13_blue_app1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app1
    demo: demo 
  name: app1
  namespace: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
        demo: demo 
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: content
        configMap:
          name: app1-content
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app1
    demo: demo 
  name: app1
  namespace: blue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
  type: LoadBalancer
