52_acnp_default_rules2.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: acnp-default-rules2
spec:
  priority: 2
  tier: baseline
  appliedTo:
  - namespaceSelector:
      matchExpressions:
      - {key: kubernetes.io/metadata.name, operator: NotIn, values: [kube-system, tanzu-system-logging, tkg-system, tkg-system-public, vmware-system-csi, avi-system ]}
  ingress:
  - name: AllowFromSameNS
    action: Allow
    from:
    - namespaces:
        match: Self
    enableLogging: true
  - name: DropFromAllOtherNS
    action: Drop
    from:
    - namespaceSelector: {}
    enableLogging: true
  - name: DropAllIngress
    action: Drop
    enableLogging: true
  egress:
  - name: AllowToSameNS
    action: Allow
    to:
    - namespaces:
        match: Self
    enableLogging: true
  - name: DropToAllOtherNS
    action: Drop
    to:
    - namespaceSelector: {}
    enableLogging: true
  - name: DropAllEgress
    action: Drop
    enableLogging: true
