56_acnp_fluentbit.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: acnp-fluentbit
spec:
  priority: 7.0
  tier: application
  appliedTo:
  - namespaceSelector:
      matchLabels:
        name: fluent-bit
  egress:
  - name: AllowToSyslog
    action: Allow
    to:
    - ipBlock:
        cidr: 192.168.10.2/32
    ports:
    - protocol: UDP
      port: 514
    enableLogging: false
